tests/core/snapshots/cors-allow-cred-false.md_0.snap
---
source: tests/core/spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "access-control-allow-headers": "Authorization",
    "access-control-allow-methods": "POST, OPTIONS",
    "access-control-max-age": "23",
    "vary": "origin, access-control-request-method, access-control-request-headers"
  },
  "body": null
}
