tests/core/snapshots/cors-allow-cred-false.md_client.snap
---
source: tests/core/spec.rs
expression: client
---
scalar Date

scalar Email

scalar Empty

scalar JSON

scalar PhoneNumber

type Query {
  val: Int
}

scalar Url

schema {
  query: Query
}
