tests/core/snapshots/cors-allow-cred-true.md_0.snap
---
source: tests/core/spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "access-control-allow-credentials": "true",
    "access-control-allow-methods": "OPTIONS, POST, GET",
    "access-control-max-age": "23",
    "vary": "origin, access-control-request-method, access-control-request-headers"
  },
  "body": null
}
