tests/core/snapshots/cors-allow-cred-vary.md_client.snap
---
source: tests/core/spec.rs
expression: formatted
---
type Query {
  val: Int
}

schema {
  query: Query
}
