tests/core/snapshots/cors-invalid-expose-headers.md_error.snap
---
source: tests/core/spec.rs
expression: errors
---
[
  {
    "message": "Invalid CORS configuration: Cannot combine `Access-Control-Allow-Credentials: true` with `Access-Control-Expose-Headers: *`",
    "trace": [
      "schema",
      "@server",
      "headers",
      "cors"
    ],
    "description": null
  }
]
